force-app/main/default/objects/Showroom_Vehicle_Checklist__c/Showroom_Vehicle_Checklist__c.object-meta.xml
<CustomObject>
    <label>Showroom Vehicle Checklist</label>
    <nameField>
        <displayFormat>SVC-{000000}</displayFormat>
        <label>Showroom Vehicle Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Showroom Vehicle Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>