force-app/main/default/objects/Showroom_Vehicle_Checklist__c/fields/Daily_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Daily_Checklist__c</fullName>
    <label>Daily Checklist</label>
    <referenceTo>Daily_Checklist__c</referenceTo>
    <relationshipLabel>Showroom Vehicle Checklists</relationshipLabel>
    <relationshipName>Showroom_Vehicle_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>