force-app/main/default/objects/Showroom_Vehicle_Checklist__c/fields/Exterior__c.field-meta.xml
<CustomField>
    <fullName>Exterior__c</fullName>
    <label>Exterior</label>
    <length>200</length>
    <type>Text</type>
</CustomField>