force-app/main/default/objects/Showroom_Vehicle_Checklist__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <length>200</length>
    <type>Text</type>
</CustomField>