force-app/main/default/objects/Showroom_Vehicle_Checklist__c/fields/Key_is_Present_Morning__c.field-meta.xml
<CustomField>
    <fullName>Key_is_Present_Morning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Open</label>
    <type>Checkbox</type>
</CustomField>