force-app/main/default/objects/Showroom_Vehicle_Checklist__c/fields/Petrol_Level_Morning__c.field-meta.xml
<CustomField>
    <fullName>Petrol_Level_Morning__c</fullName>
    <label>Petrol Open</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>